cc-base-app/main/default/objects/Bug_Report__c/Bug_Report__c.object-meta.xml
<CustomObject>
    <description>Bug Hunt reports submitted from the Experience site.</description>
    <label>Bug Report</label>
    <pluralLabel>Bug Reports</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Bug Report Number</label>
        <displayFormat>BR-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>