cc-base-app/main/default/objects/Bug_Report__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <relationshipLabel>Bug Reports</relationshipLabel>
    <relationshipName>Bug_Reports</relationshipName>
    <type>Lookup</type>
    <referenceTo>Case</referenceTo>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>