cc-base-app/main/default/objects/Bug_Report__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin</label>
    <length>80</length>
    <type>Text</type>
</CustomField>