cc-base-app/main/default/objects/Bug_Report__c/fields/SubmittedBy__c.field-meta.xml
<CustomField>
    <fullName>SubmittedBy__c</fullName>
    <label>Submitted By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>