cc-base-app/main/default/objects/Bug_Report__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>